--- a/src/appStyle.css
+++ b/src/appStyle.css
@@ -8,8 +8,7 @@
 body{
     background: #1d1d1d;
     min-height: 100vh;
-    width: 100%;
-    
+    width: 100%; 
 }
 
 /* APP ----------------- */
@@ -41,8 +40,6 @@ body{
     backdrop-filter: blur(5px);
 }
 
-
-
 /* Table----------------- */
 table{
     width:1200px;
@@ -62,8 +59,7 @@ thead{
 
 th{
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-    /* background: rgba(255, 255, 255, 0.1); */
-    background-color: rgba(128, 128, 128, 0.445);
+    background-color: rgba(255, 105, 180, 0.973);
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(5px);
@@ -71,7 +67,6 @@ th{
 
 td{
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-    /* background: rgba(255, 255, 255, 0.1); */
     background-color: rgba(255, 182, 193, 0.199);
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
@@ -84,6 +79,12 @@ button{
     cursor: pointer;
     border: 0;
     border-radius: 5px;
+    background: lightskyblue;
+    transition: 0.3s;
+}
+
+button:hover{
+    background: lightblue;
 }
 
 /* Add Form -------------- */
