--- a/src/appStyle.css
+++ b/src/appStyle.css
@@ -81,11 +81,14 @@ button{
     border-radius: 5px;
     background: lightskyblue;
     transition: 0.3s;
+    font-size: 1rem;
 }
 
 button:hover{
     background: lightblue;
 }
+
+
 
 /* Add Form -------------- */
 .addForm-title{
@@ -111,4 +114,13 @@ button:hover{
 .addForm-btn{
     width: 80px;
     height: 1.8rem;
+}
+
+/*  EDITABLE ROW */
+.editableRow-input{
+    padding:  2px 8px;
+    font-size: 1.4rem;
+    background-color: #fcd2e7;
+    width: 100%;
+    height: 100%;
 }
